--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -55,6 +55,7 @@
             outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
             outcomeUpdated: offence.updatedOutcome,
             countNumber: offence.sentence.countNumber,
+            lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
@@ -101,6 +102,7 @@
                         outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
+                        lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
@@ -138,6 +140,7 @@
                         outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
+                        lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
