--- a/server/views/partials/displayCustodialNonCustodialOffenceCards.njk
+++ b/server/views/partials/displayCustodialNonCustodialOffenceCards.njk
@@ -22,6 +22,7 @@
             offenceEndDate: offence.offenceEndDate | formatDate,
             outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
             countNumber: offence.sentence.countNumber,
+            lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
@@ -66,6 +67,7 @@
             offenceEndDate: offence.offenceEndDate | formatDate,
             outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
             countNumber: offence.sentence.countNumber,
+            lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
