--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -202,6 +202,7 @@
                             offenceEndDate: offence.offenceEndDate | formatDate,
                             outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                             countNumber: offence.sentence.countNumber,
+                            lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                             convictionDate: offence.sentence.convictionDate | formatDate,
                             terrorRelated: offence.terrorRelated,
                             isSentenced: offence.sentence,
