--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -169,6 +169,7 @@
                         offenceEndDate: charge.offenceEndDate | formatDate,
                         outcome: charge.outcome | chargeOutcomeOrLegacy(charge.legacyData),
                         countNumber: charge.sentence.chargeNumber,
+                        lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                         convictionDate: charge.sentence.convictionDate | formatDate,
                         terrorRelated: charge.terrorRelated,
                         isSentenced: charge.sentence,
