--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -28,6 +28,7 @@
                         outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
+                        lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
@@ -65,6 +66,7 @@
                         outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
+                        lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
