--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -221,6 +221,7 @@
             offenceEndDate: offence.offenceEndDate | formatDate,
             outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
             countNumber: offence.sentence.countNumber,
+            lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
@@ -261,6 +262,7 @@
                     offenceEndDate: offence.offenceEndDate | formatDate,
                     outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                     countNumber: offence.sentence.countNumber,
+                    lineNumber: offence.sentence.legacyData.nomisLineReference if offence.sentence and offence.sentence.legacyData,
                     convictionDate: offence.sentence.convictionDate | formatDate,
                     terrorRelated: offence.terrorRelated,
                     isSentenced: offence.sentence,
