--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -115,9 +115,7 @@
 {% endif %}
 
 {% block pageContent %}
-    <span class="govuk-caption-l" data-qa="warrant-information-caption">
-        Add overall warrant information
-    </span>
+    {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
     <h1 class="govuk-heading-l">
         Check your answers
