--- a/server/views/pages/overallSentencing/alternative-sentence-length.njk
+++ b/server/views/pages/overallSentencing/alternative-sentence-length.njk
@@ -8,9 +8,7 @@
     {{ super() }}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-alternative-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l" data-qa="warrant-information-caption">
-                    Add overall warrant information
-                </span>
+                {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
                 {% call govukFieldset({
                     legend: {
