--- a/server/views/pages/overallSentencing/overall-conviction-date.njk
+++ b/server/views/pages/overallSentencing/overall-conviction-date.njk
@@ -48,9 +48,7 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-conviction-date{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l" data-qa="warrant-information-caption">
-                    Add overall warrant information
-                </span>
+                {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
                 {{ govukRadios({
                     name: "overallConvictionDateAppliedAll",
