--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -52,9 +52,7 @@
     <form method="post"
           action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        <span class="govuk-caption-l" data-qa="warrant-information-caption">
-            Add overall warrant information
-        </span>
+        {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
         {{ govukRadios({
             name: "hasOverallSentenceLength",
