--- a/server/views/pages/overallSentencing/overall-case-outcome.njk
+++ b/server/views/pages/overallSentencing/overall-case-outcome.njk
@@ -1,8 +1,9 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% set pageTitle = applicationName + " - Add a court case outcome" %}
+{% set pageTitle = applicationName + " - Add a sentencing court case outcome" %}
+{% set hideOffences = true %}
 
 {% set fieldSetHtml %}
     <h1 class="govuk-fieldset__heading{% if legacyCaseOutcome %} govuk-!-static-margin-bottom-3{% endif %}">{% if isAddCourtAppearance%}Select the overall case outcome{%else%}Edit the overall case outcome{%endif%}</h1>
