align layouts in overall sentencing

--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
 {% set pageTitle = applicationName + " - Check your answers" %}
+{% set hideOffences = true %}
 {% set isAddOffences = true %}
 {% set summaryRows = [
     {
