--- a/server/views/pages/overallSentencing/overall-conviction-date.njk
+++ b/server/views/pages/overallSentencing/overall-conviction-date.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
@@ -41,8 +41,9 @@
 {% endset %}
 
 {% set pageTitle = applicationName + " - Add a court case Overall conviction Date" %}
+{% set hideOffences = true %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
