--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -46,6 +46,7 @@
 {% endset %}
 
 {% set pageTitle = applicationName + " - Add overall sentence length" %}
+{% set hideOffences = true %}
 
 {% block pageContent %}
     {{ super() }}
