--- a/server/views/pages/overallSentencing/overall-case-outcome.njk
+++ b/server/views/pages/overallSentencing/overall-case-outcome.njk
@@ -49,7 +49,7 @@
     {% endfor %}
 {% endif %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
