--- a/server/views/pages/overallSentencing/overall-case-outcome.njk
+++ b/server/views/pages/overallSentencing/overall-case-outcome.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/appearanceDetailsLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
@@ -49,7 +49,7 @@
     {% endfor %}
 {% endif %}
 
-{% block pageContent %}
+{% block content %}
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
