--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
