RASS-1150 fix layout of overall sentencing case outcome page (#845)
* RASS-1150 fix layout of overall sentencing case outcome page

* align layouts in overall sentencing

* make all pages on overall not appearance details

* align all layouts

* remove unrequired sets

* fix

--- a/server/views/pages/overallSentencing/alternative-sentence-length.njk
+++ b/server/views/pages/overallSentencing/alternative-sentence-length.njk
@@ -1,10 +1,11 @@
-{% extends "../../partials/appearanceDetailsLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "../../components/alternativeSentenceLength/macro.njk" import alternativeSentenceLength%}
+
 {% set pageTitle = applicationName + " - Add alternative sentence length" %}
 
-{% block pageContent %}
+{% block content %}
     {{ super() }}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-alternative-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
