RASS-940-delete functionalities added

--- a/server/views/pages/courtAppearance/upload-court-documents.njk
+++ b/server/views/pages/courtAppearance/upload-court-documents.njk
@@ -38,7 +38,7 @@
             <div>
             <a class="govuk-link govuk-!-margin-left-0" href=""><strong>{{ foundDoc.fileName }}</strong></a>
             <span class="govuk-tag--green govuk-!-margin-left-8">Uploaded</span>
-            <a class="govuk-link govuk-!-margin-left-4" href="">Remove</a>
+            <a class="govuk-link govuk-!-margin-left-4" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/delete-document?documentId={{ foundDoc.documentId }}">Remove</a>
             </div>
           </p>
           <p class="govuk-body">
