RASS-1067 editing outcome to sentencing

--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -6,8 +6,8 @@
 
 {% set fieldSetHtml %}
     <h1 class="govuk-fieldset__heading{% if legacyCaseOutcome %} govuk-!-static-margin-bottom-3{% endif %}">Select the outcome for this offence</h1>
-    <p class="govuk-body-l" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }}</p>
-    {% if legacyCaseOutcome%}
+    <p class="govuk-body-l" data-qa="offenceParagraph">{{ offenceDetails.code }} - {{ offenceDetails.description }}</p>
+    {% if legacyCaseOutcome %}
     <p class="govuk-body-l govuk-!-static-margin-bottom-3" data-qa="legendParagraph">{{ legacyCaseOutcome }}</p>
     {% endif %}
 {% endset %}
