RASS-1125 display merged to case details

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -106,6 +106,16 @@
                             
                             {% endif %}
 
+                            {% if courtCaseDetails.mergedToCase %}
+                                {{ govukInsetText({
+                                    text: courtCaseDetails.mergedToCase | formatMergedToCase(courtMap),
+                                    classes: "govuk-!-margin-top-2",
+                                    attributes: {
+                                        "data-qa": "mergedToCaseInset-" + courtCaseDetails.courtCaseUuid
+                                    }
+                                }) }}
+                            {% endif %}
+
                             {% if courtCaseDetails.mergedFromCases and courtCaseDetails.mergedFromCases.length %}
                                 {% set mergedFromCasesHtml = '' %}
 
