--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -45,7 +45,7 @@
                       items: [
                         {
                           href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentId + "/delete-document",
-                          text: "Remove",
+                          text: "Delete",
                           visuallyHiddenText: "document"
                         }
                       ]
