--- a/server/views/pages/courtAppearance/upload-court-documents.njk
+++ b/server/views/pages/courtAppearance/upload-court-documents.njk
@@ -43,7 +43,7 @@
                   items: [
                     {
                       href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentId + "/delete-document",
-                      text: "Remove",
+                      text: "Delete",
                       visuallyHiddenText: "document"
                     }
                   ]
