--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -6,8 +6,10 @@
 {% set pageTitle = applicationName + " - upload court documents" %}
 
 {% block pageContent %}
+<div class="govuk-!-margin-right-8">
+ <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-upload-court-documents">
   <h1 class="govuk-heading-l">Upload court documents</h1>
-  <p class="govuk-caption-l">
+  <p class="govuk-hint">
     Uploading documents is optional. The selected file type should be among .PDF, .JPG, .DOC and .DOCX under 50MB.
   </p>
 
@@ -66,11 +68,12 @@
             {% endif %}
   {% endfor %}
 
-  <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-answers">
+
     <input type="hidden" name="_csrf" value="{{ csrfToken }}">
     {{ govukButton({
         text: "Continue",
         attributes: { 'data-qa': 'continue-button' }
     }) }}
   </form>
+  </div>
 {% endblock %}
