--- a/server/views/pages/sentencing/sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/sentence-consecutive-to.njk
@@ -10,7 +10,7 @@
 {% set errorMessage = errors | findError('consecutiveToSentenceUuid') %}
 {% set radioIdIndex = 0 %}
 {% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/offences/{{ offenceReference }}/submit-sentence-consecutive-to{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/offences/{{ offenceReference }}/submit-sentence-consecutive-to{{ submitQuery }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
                 <div class="govuk-form-group {%- if errorMessage %} govuk-form-group--error{% endif %}">
@@ -36,24 +36,27 @@
                     {% endif %}
                     <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
 
-                        <h2 class="govuk-heading-m">Sentences on this case</h2>
-                        {% for sentence in sentencesOnSameCase | sortByCountNumber %}
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceReference}}|SAME">
-                                <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}">
-                                    {% if sentence.countNumber%}
-                                        Count {{sentence.countNumber}}<br>
-                                    {% endif %}
-                                    {{ sentence.offenceCode }} - {{offenceMap[sentence.offenceCode]}}
-                                    {% if sentence.offenceStartDate %}
-                                        <br><span class="govuk-hint">
-                                            Committed on {{ sentence.offenceStartDate | formatDate }}{{' to ' + sentence.offenceEndDate | formatDate if sentence.offenceEndDate }}
-                                        </span>
-                                    {% endif %}
-                                </label>
-                            </div>
-                            {% set radioIdIndex=radioIdIndex + 1 %}
-                        {% endfor %}
+                        {% if sentencesOnSameCase.length %}
+                            <h2 class="govuk-heading-m">Sentences on this case</h2>
+                            {% for sentence in sentencesOnSameCase | sortByCountNumber %}
+                                <div class="govuk-radios__item">
+                                    <input class="govuk-radios__input" id="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceReference}}|SAME">
+                                    <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}">
+                                        {% if sentence.countNumber%}
+                                            Count {{sentence.countNumber}}<br>
+                                        {% endif %}
+                                        {{ sentence.offenceCode }} - {{offenceMap[sentence.offenceCode]}}
+                                        {% if sentence.offenceStartDate %}
+                                            <br><span class="govuk-hint">
+                                                Committed on {{ sentence.offenceStartDate | formatDate }}{{' to ' + sentence.offenceEndDate | formatDate if sentence.offenceEndDate }}
+                                            </span>
+                                        {% endif %}
+                                    </label>
+                                </div>
+                                {% set radioIdIndex=radioIdIndex + 1 %}
+                            {% endfor %}
+                        {% endif %}
+
                         {% if sentencesToChainTo.appearances.length %}
                             <h2 class="govuk-heading-m" data-qa="sentencesOnOtherCasesHeader">Sentences on other cases</h2>
 
