RASS-1160 fix typo, fix back link

--- a/server/views/pages/sentencing/delete-sentence-in-chain.njk
+++ b/server/views/pages/sentencing/delete-sentence-in-chain.njk
@@ -31,7 +31,7 @@
                 </p>
                 <p class="govuk-body">This sentence is currently linked to another sentence as part of a consecutive chain. If you delete it, the chain will be broken and the sentencing information might no longer reflect the warrant correctly.</p>
                 <p class="govuk-body">After deleting the sentence, you will need to check the other sentences, to make sure they are accurate.</p>
-                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6">Are you sure you want to delete is?</p>
+                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6">Are you sure you want to delete it?</p>
             {%- endcall %}
         </div>
     </div>
