RASS-1144-logics uppdated to save and update documents

--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -38,7 +38,7 @@
                 rows: [
                   {
                     key: {
-                      html: '<a class="govuk-link" target="_blank"   href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/' + foundDoc.documentId + '/download-document"><strong>' + foundDoc.fileName + '</strong></a><br><span class="govuk-body-s">' + docTypeInfo.name + '</span>'
+                      html: '<a class="govuk-link" target="_blank"   href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/' + foundDoc.documentUUID + '/download-document"><strong>' + foundDoc.fileName + '</strong></a><br><span class="govuk-body-s">' + docTypeInfo.name + '</span>'
                     },
                     value: {
                       html: govukTag({text: "Uploaded", classes: "govuk-tag--green"})
@@ -46,7 +46,7 @@
                     actions: {
                       items: [
                         {
-                          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentId + "/delete-document",
+                          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentUUID + "/delete-document",
                           text: "Delete",
                           visuallyHiddenText: "document"
                         }
