--- a/server/views/pages/courtAppearance/delete-document.njk
+++ b/server/views/pages/courtAppearance/delete-document.njk
@@ -5,12 +5,12 @@
 {% set pageTitle = applicationName + " - Confirm Delete Document" %}
 {% set fieldSetHtml %}
     <h1 class="govuk-fieldset__heading govuk-!-static-margin-bottom-3">Are you sure you want to delete this document?</h1>
-    <p class="govuk-body"><a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ document.documentId }}/download-document" target="_blank" class="govuk-link">{{ document.fileName }}</a></p>
+    <p class="govuk-body"><a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ document.documentUUID }}/download-document" target="_blank" class="govuk-link">{{ document.fileName }}</a></p>
 {% endset %}
 {% block pageContent %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ document.documentId }}/submit-delete-document">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ document.documentUUID }}/submit-delete-document">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
                 {{ govukRadios({
